--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="web application that let the users manage their task">
+  <meta name="keywords" content="todo list, tasks management">
+  <meta name="author" content="Tom Issarakoat">
   <title>Todo-list</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/todo-logo.png" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://kit.fontawesome.com/71b39d7762.js" crossorigin="anonymous"></script>
